tests/baselines/reference/typeCheckingInsideFunctionExpressionInArray.errors.txt
==== tests/cases/compiler/typeCheckingInsideFunctionExpressionInArray.ts (4 errors) ====
    var functions = [function () {
      var k: string = 10;
          ~~~~~~~~~~~~~~
!!! typeCheckingInsideFunctionExpressionInArray.ts(2,7): error TS2011: Type 'number' is not assignable to type 'string'.
        k = new Object();
        ~
!!! typeCheckingInsideFunctionExpressionInArray.ts(3,5): error TS2011: Type 'Object' is not assignable to type 'string'.
        [1, 2, 3].NonexistantMethod();
                  ~~~~~~~~~~~~~~~~~
!!! typeCheckingInsideFunctionExpressionInArray.ts(4,15): error TS2094: Property 'NonexistantMethod' does not exist on value of type 'number[]'.
        derp();
        ~~~~
!!! typeCheckingInsideFunctionExpressionInArray.ts(5,5): error TS2095: Cannot find name 'derp'.
    }];
    